[gd_scene load_steps=3 format=3 uid="uid://khvvmagklkf0"]

[ext_resource type="FontFile" uid="uid://dntl7mecdsp4b" path="res://Assets/Fonts/CloisterBlack.ttf" id="1_ir3xt"]
[ext_resource type="Script" path="res://Common/UI/Menu/LogIn/Authentication.gd" id="1_pjqrl"]

[node name="LogInScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pjqrl")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.305882, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StateLabel" type="Label" parent="UI/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme_override_fonts/font = ExtResource("1_ir3xt")
theme_override_font_sizes/font_size = 24
text = "not logged in
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonVBox" type="VBoxContainer" parent="UI/MainMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
metadata/_edit_group_ = true

[node name="EmailLineEdit" type="LineEdit" parent="UI/MainMenu/ButtonVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Email"

[node name="PassLineEdit" type="LineEdit" parent="UI/MainMenu/ButtonVBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="UI/MainMenu/ButtonVBox"]
layout_mode = 2
text = "Log in"

[node name="SignupButton" type="Button" parent="UI/MainMenu/ButtonVBox"]
layout_mode = 2
text = "Sign up"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu"]
layout_mode = 2
alignment = 2

[node name="HighSchool" type="Label" parent="UI/MainMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_ir3xt")
text = "Ies Pere Maria"

[node name="Author" type="Label" parent="UI/MainMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_ir3xt")
text = "WPN 2ÂºDAM"

[connection signal="pressed" from="UI/MainMenu/ButtonVBox/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/ButtonVBox/SignupButton" to="." method="_on_signup_button_pressed"]
